[metadata]
name = sopel-ipython
version = 0.0.2
description = IPython console plugin for Sopel IRC bots
author = dgw
author_email = dgw@technobabbl.es
url = https://github.com/sopel-irc/sopel-ipython
license = Eiffel Forum License, version 2
platforms = Linux x86, x86-64
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
install_requires =
    sopel>=7.0
    ipython<6.0; python_version < '3.3'
    ipython>=6.0,<7.0; python_version >= '3.3' and python_version < '3.5'
    ipython>=7.0,<8.0; python_version >= '3.5'

[options.entry_points]
sopel.plugins =
    ipython = sopel_ipython
