[metadata]
name = sopel-ipython
version = 0.0.2
description = IPython console plugin for Sopel IRC bots
author = dgw
author_email = dgw@technobabbl.es
url = https://github.com/sopel-irc/sopel-ipython
license = Eiffel Forum License, version 2
platforms = Linux x86, x86-64
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
python_requires = >=3.8
install_requires =
    sopel>=8.0
    ipython>=8.0

[options.entry_points]
sopel.plugins =
    ipython = sopel_ipython
